--- a/bin/build
+++ b/bin/build
@@ -2,18 +2,26 @@
 
 VERSION=1.0
 
+GREEN='\033[1;32m'
+RED='\033[1;31m'
+CLEAR='\033[0m'
+
+FLAKE="flemzords-MBP"
+SYSTEM="darwinConfigurations.$FLAKE.system"
+
+export NIXPKGS_ALLOW_UNFREE=1
+
 # Navigate to the directory of this script
 cd $(dirname $(readlink -f $0))
 cd ..
 
-build() {
-    if [ "$(uname)" == "Darwin" ]; then
-       ./bin/darwin-build $@
-    elif [ "$(uname)" == "Linux" ]; then
-       ./bin/nixos-build $@
-    else
-       echo "Unknown platform"
-    fi
-}
+echo "${GREEN}Starting...${CLEAR}"
+nix --experimental-features 'nix-command flakes' build .#$SYSTEM --impure $@
 
-build
+echo "${GREEN}Switching to new generation...${CLEAR}"
+./result/sw/bin/darwin-rebuild switch --flake .#$FLAKE --impure $@
+
+echo "${GREEN}Cleaning up...${CLEAR}"
+unlink ./result
+
+echo "${GREEN}Done${CLEAR}"
