chore(review): address PR feedback — fix build features, rename sharedPackages var, refine pre-commit deadnix args, dedupe devShell, remove missing srv-project, tighten checkout creds; apply formatting

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,6 +31,6 @@ repos:
       name: deadnix
       description: Detect unused Nix code
       entry: deadnix
-      args: ["--fail", "."]
+      args: ["--fail"]
       language: system
       files: \.nix$
